Bug 143858 - Outline numbering not showing any number, only the prefix/suffix
Summary: Outline numbering not showing any number, only the prefix/suffix
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.2 rc
Hardware: All All
: high major
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-08-13 12:52 UTC by Justin L
Modified: 2021-08-19 12:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2021-08-13 12:52:35 UTC
Steps to reproduce: select an outline numbering style
-start a new document
-click on the drop-down for inserting list numbering and choose "More Numbering".
-select the "Outline" tab and pick any one of those predefined styles (except bullets)

Notice that no numbering is shown. Only the dot or () are shown. (I was primarily testing with the 3rd one.) (The one with all levels using 1. starts showing the numbering at the second level.)

This started in 7.2.0.2 with commit aa5c6d127559912ad60a63fbd972b78fb8f9691b
Author: Vasily Melenchuk on Mon Jun 14 14:27:56 2021 +0300
    new ODF numbered list parameter loext:num-list-format
Comment 1 Vasily Melenchuk (CIB) 2021-08-13 13:02:48 UTC
Yeah, seems another regression from that refactoring.
I'll manage that.
Comment 2 Commit Notification 2021-08-17 14:54:20 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37dd6e18f5cf498d230ffe8a0a395cfdf9625e0c

tdf#143858: sw: default value for nInclUpperLevels is 1

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2021-08-18 20:33:08 UTC
It's ok now
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 5b025285b3528910a4360899abb2bbbaadc72c97
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2021-08-19 12:29:15 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/e08fba90f9b593b1a0a7af44bae1d7da0404d3f1

tdf#143858: sw: default value for nInclUpperLevels is 1

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.