tdf#143858: sw: default value for nInclUpperLevels is 1

SvxNumberFormat::nInclUpperLevels (matches text:display-levels in ODF)
bit incorrect in its name: is counts total amount of levels to display,
including current level. So value "0" seems have no sense: display 0
levels in total?

In UI you can't select less than 1 level and ODF standard (19.797)
using 1 as a default. This looks plausable.

Change-Id: I596386c7b3cc4370910cd0ff6e927e501179fbdf